// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar component should match snapshot when in desktop view and SideBar is closed 1`] = `
<div
  class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-10"
>
  <div
    class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-11 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
  >
    <div>
      <div
        class="makeStyles-root-13"
      >
        <div
          class="MuiTypography-root MuiTypography-button"
        >
          general
        </div>
        <div
          class="makeStyles-content-14"
        >
          <a
            aria-current="page"
            class="makeStyles-link-16 makeStyles-active-17"
            href="/"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-15 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-18"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                    />
                  </svg>
                </span>
                dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-16"
            href="/reports"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-15 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-18"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                    />
                  </svg>
                </span>
                reports
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideBar component should match snapshot when in desktop view and SideBar is opened 1`] = `
<div
  class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1"
>
  <div
    class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-2 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
  >
    <div>
      <div
        class="makeStyles-root-4"
      >
        <div
          class="MuiTypography-root MuiTypography-button"
        >
          general
        </div>
        <div
          class="makeStyles-content-5"
        >
          <a
            aria-current="page"
            class="makeStyles-link-7 makeStyles-active-8"
            href="/"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-6 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-9"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                    />
                  </svg>
                </span>
                dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-7"
            href="/reports"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-6 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-9"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                    />
                  </svg>
                </span>
                reports
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideBar component should match snapshot when in mobile view and SideBar is closed 1`] = `
<div
  aria-hidden="true"
  class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-28"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root makeStyles-backdrop-30"
    style="opacity: 0; visibility: hidden;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-29 MuiDrawer-paperAnchorLeft MuiPaper-elevation2"
    style="visibility: hidden; webkit-transform: translateX(-0px); transform: translateX(-0px);"
    tabindex="-1"
  >
    <div>
      <div
        class="makeStyles-root-31"
      >
        <div
          class="MuiTypography-root MuiTypography-button"
        >
          general
        </div>
        <div
          class="makeStyles-content-32"
        >
          <a
            aria-current="page"
            class="makeStyles-link-34 makeStyles-active-35"
            href="/"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-33 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-36"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                    />
                  </svg>
                </span>
                dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-34"
            href="/reports"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-33 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-36"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                    />
                  </svg>
                </span>
                reports
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`SideBar component should match snapshot when in mobile view and SideBar is opened 1`] = `
<div
  class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-19"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root makeStyles-backdrop-21"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-20 MuiDrawer-paperAnchorLeft MuiPaper-elevation2"
    tabindex="-1"
  >
    <div>
      <div
        class="makeStyles-root-22"
      >
        <div
          class="MuiTypography-root MuiTypography-button"
        >
          general
        </div>
        <div
          class="makeStyles-content-23"
        >
          <a
            aria-current="page"
            class="makeStyles-link-25 makeStyles-active-26"
            href="/"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-24 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-27"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                    />
                  </svg>
                </span>
                dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
          <a
            class="makeStyles-link-25"
            href="/reports"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-24 MuiButton-fullWidth"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-iconRoot-27"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                    />
                  </svg>
                </span>
                reports
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;
